[package]
name = "base"
version = "1.0.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]

prover = ["dep:libflate"]

[dependencies]
chrono = "0.4.38"
tokio = { version = "1.0", features = ["time", "macros", "rt-multi-thread", "sync"] }

# eth
alloy = { version = "0.2", default-features = false, features = ["signer-local", "rpc-types-eth", "sol-types", "providers", "std", "reqwest-rustls-tls", "json-rpc"] }
url = "2.5.0"
serde = { version = "1", features = ["derive"] }
libflate = { version = "2.1.0", optional = true }
secp256k1 = { version = "0.29.1", features = ["serde", "rand", "recovery", "global-context"] }